Make sure pre-wraps

--- a/inst/html_assets/packagedocs/pd.css
+++ b/inst/html_assets/packagedocs/pd.css
@@ -78,7 +78,7 @@ h2 {
 /* make sure pre wraps */
 .hljs {
   word-wrap: normal;
-  white-space: pre;
+  white-space: pre-wrap;
 }
 
 pre.r-output {
